# te_events

./: README.md
backend/: database.db  main.py  pyproject.toml  requirements.txt  test.db  test_main.http  test_main.py
backend/core/: db.py  models.py
draft/: assignment.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  models.ts
frontend/src/components/: EventList.tsx  Index.tsx
