[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["JKharidinov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
httpx = "^0.27.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
